fix css for Stat 541 content cutoff

--- a/customcallouts.scss
+++ b/customcallouts.scss
@@ -211,3 +211,31 @@ div.callout-opinion.icon.callout-captioned .callout-icon::before {
 
 
 /*-- source:https://stackoverflow.com/questions/74647399/define-a-new-callout-in-quarto --*/
+
+
+// Extra (grad) content divider
+
+.stat541 {
+  margin: 2em 0;
+  padding: 1em 0;
+  background-color: #f5f5f5;
+  border-top: 2px solid #999;
+  border-bottom: 2px solid #999;
+  text-align: center;
+  font-weight: bold;
+}
+
+.stat541::before {
+  content: "Advanced Details";
+  display: block;
+  font-size: 1.5em;
+  margin-bottom: 0.5em;
+}
+
+.stat541::after {
+  content: "Content below is required for students enrolled in STAT 541 and optional for students enrolled in STAT 431.";
+  display: block;
+  font-weight: normal;
+  font-size: 0.95em;
+  margin-top: 0.5em;
+}
